--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+
+    <meta http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' https://bitsnft.com; style-src 'self' https://bitsnft.com; img-src 'self' https://bitsnft.com; font-src 'self' https://fonts.googleapis.com; connect-src 'self' https://api.bitsnft.com; object-src 'none'; media-src 'self'; frame-src 'self'">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -54,18 +55,15 @@
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5EEN7X9W4X"
-    ></script>
+      src="https://www.googletagmanager.com/gtag/js?id=G-5EEN7X9W4X"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
