--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet" />
 
     <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' https://bitsnft.com; style-src 'self' https://bitsnft.com; img-src 'self' https://bitsnft.com; font-src 'self' https://fonts.googleapis.com; connect-src 'self' https://api.bitsnft.com; object-src 'none'; media-src 'self'; frame-src 'self'">
+      content="default-src 'self'; script-src 'self' https://bitsnft.com; connect-src 'self' https://api.bitsnft.com; object-src 'none'; media-src 'self'; frame-src 'self'">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
